Add CDI project